# dev-info-checker

./: .gitignore  ARCHITECTURE.md  CLOUDPHONE_DETECTION.md  DETECTION_COVERAGE.md  PHASE2_SERVER.md  devcheck-report-15039-latest.json  install.sh  settings.gradle.kts
gradle/: libs.versions.toml
protocol/: build.gradle.kts
protocol/src/main/kotlin/com/devcheck/protocol/: Blockers.kt  Catalog.kt  Enums.kt  EvidenceBundle.kt  ReportJson.kt  RiskReport.kt  Scoring.kt  Signal.kt  Signals.kt
protocol/src/test/kotlin/com/devcheck/protocol/: EvidenceBundleTest.kt  ScoringTest.kt
sample/: build.gradle.kts
sample/keystore/: devcheck-release.jks
sample/src/main/: AndroidManifest.xml
sample/src/main/kotlin/com/devcheck/sample/: MainActivity.kt
sample/src/main/res/values/: themes.xml
sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  devcheck.cpp
sdk/src/main/kotlin/com/devcheck/: DevCheck.kt  DevCheckConfig.kt
sdk/src/main/kotlin/com/devcheck/attest/: Asn1.kt  KeyAttestation.kt  PlayIntegrity.kt
sdk/src/main/kotlin/com/devcheck/core/: GpuInfo.kt  LocalRiskScorer.kt  Orchestrator.kt  Secrets.kt  Util.kt
sdk/src/main/kotlin/com/devcheck/detector/: AttestDetector.kt  CloudPhoneDetector.kt  DebugDetector.kt  Detector.kt  DeviceFingerprintDetector.kt  EcosystemDetector.kt  EmulatorDetector.kt  EnvironmentDetector.kt  FileTimeDetector.kt  HookDetector.kt  NetworkDetector.kt  RadioDetector.kt  RootDetector.kt  SeLinuxDetector.kt  SensorDetector.kt  (+3 more)
server/: build.gradle.kts
(+16 files in other folders)
